[package]
name = "sktchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock"] }
lazy_static = "1.4.0"
libc = "0.2.149"
mach = { git = "https://github.com/gallantcrusasder/mach.git"}
sketchybar-rs = {path = "https://github.com/gallantcrusasder/sketchybar-rs.git"}
